--- a/home.html
+++ b/home.html
@@ -1,115 +1,203 @@
-<!--#set var="title" value="Home" -->
-<!--#set var="page" value="home" -->
+<!--#set var="title" value="LevenTime" -->
 <!--#include file="_head.shtml"-->
 
 	<main class="main flexbox__flex-1">
 
-		<div class="img-top img-top--big img-top--home flexbox flexbox--column">
+		<article class="">
 
-			<div class="flexbox__center-vertical">
-
-				<div class="center center--md90p xs-w100p">
-
-					<h3 class="h0">Best loans online</h3>
-
-					<p class="img-top__text">You choose the amount and in how much time you want <br> to return. Apply for a loan online quick and easy way <br>to cover a specific need.</p>
-
-					<a href="" class="btn btn--big">Get started</a>
-
-				</div>
-
-			</div>
-
-		</div>
-
-		<ul class="block-thesis flexbox flexbox--justify-between flexbox--wrap center center--md90p align-center">
-
-			<li class="block-thesis__item">
-
-				<h3 class="h2">Support</h3>
-				<p>Free registration <br>and excellent service</p>
-
-			</li>
-
-			<li class="block-thesis__item">
-
-				<h3 class="h2">Сonfidence</h3>
-				<p>Limit up to 3000€ and pay only <br>for what you use</p>
-
-			</li>
-
-			<li class="block-thesis__item">
-
-				<h3 class="h2">Stability</h3>
-				<p>Monthly payments on the loan <br>used from 10€</p>
-
-			</li>
-
-		</ul>
-
-<!--#include file="_rapicredit-app-steps.shtml"-->
-
-		<article class="block-our-advantages block-our-advantages--bg">
-
-<!--#include file="_block-our-advantages.shtml"-->
-
-		</article>
-
-		<section class="last-news center align-center center--md xs-w100p">
-
-			<h2 class="h1">Latest news</h2>
-
-			<a class="readmore" href="news.html">See all news</a>
-
-<!--#include file="_last-news.shtml"-->
-
-		</section>
-
-		<aside class="block-faq">
-
-			<div class="block-faq__inner center center--md90p xs-w100p">
-
-				<h3 class="h1">You have questions?</h3>
-
-				<p>In a professional context it often happens that private or corporate clients</p>
-
-				<ul class="block-faq__list">
-					<li>
-						<a class="block-faq__link" href="faq.html#general-questions">What documents do I need for a loan?</a>
-					</li>
-					<li>
-						<a class="block-faq__link" href="faq.html#applying-for-loans">Transferred or deposited in your account money, how to get them back?</a>
-					</li>
-					<li>
-						<a class="block-faq__link" href="faq.html#what-kind-of-loans-does-offer">Don't have the time to repay the loan, what to do?</a>
-					</li>
-					<li>
-						<a class="block-faq__link" href="faq.html#how-is-the-application-different">How do I change the phone number in the profile?</a>
-					</li>
-				</ul>
-
-			</div>
-
-		</aside>
-
-		<article class="info-block flexbox flexbox--wrap flexbox--justify-between center center--md90p xs-w100p">
-
-			<h1 class="info-block__title h1">How to apply for a loan online</h1>
-
-			<div class="info-block__text">
-
-				<p>A loan online simply fill out an application, consisting of three items - your passport data, place of work and amount of income, as well as additional contact information. On average, the consideration of the application takes no more than a quarter of an hour. Working hours - from eight in the morning until nine at night every day. All communication goes through the Internet.</p>
-
-			</div>
-
-			<div class="info-block__text">
-
-				<p>To quickly get the financial assistance you need only mobile phone and Internet access. Don't need any income, family composition, guarantees of third parties and other unpleasant procedures. If you want to make in my life something important, in 99% of cases you need money. And we deliver it in Express mode. Quick loan - not a direct materialization of desires, but close to it.</p>
-
-			</div>
+			<h1 class=""></h1>
 
 		</article>
 
 	</main>
+
+
+
+
+Your site's title should be here
+
+
+Подробнее
+
+Участвуй в тестированиии получи новый сверхбыстрыйбезупречный смартфонXiaomi MI5
+
+
+
+
+Открой мир заново
+
+
+
+RU
+
+
+
+
+Что ты можешь делать в Leventime?
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+Открывать встречи
+
+
+
+
+
+Учавствовать во встречах,посещать интересные места
+
+
+
+
+
+Просматривать встречисвоих друзей
+
+
+
+
+
+
+Находить единомышленников
+
+Получать награды
+
+
+Создавать встречи и получатьскидки в любимых местах
+
+
+
+
+Где скачать
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+о leventime
+
+
+
+Leventime&nbsp;представляет собой сервис, для создания и поиска встреч, с целью новых знакомств.
+
+
+
+Если вы хотите куда-нибудь сходить, но не имеете спутника, то мы обязательно будем вам полезны.
+
+
+
+
+Создать встречу можно от простого похода в кофейню, прогулки на улице, похода в кино, до больших мероприятий, таких как поездка за границу.
+
+
+
+Никогда еще поиск новых знакомых не был таким простым. Попробуйте и убедитесь в этом сами.
+
+
+
+
+
+
+
+
+
+
+Copyright © 2017
+
+
+
+
+
+АВТОРИЗАЦИЯ
+
+
+
+
+
+
+
+E-mail
+Неправильный е-мейл
+
+
+
+
+
+
+Пароль
+Неправильный пароль
+
+
+
+
+Забыли пароль?
+
+
+
+
+
+Запомнить меня
+
+
+войти
+
+
+
+
+Название организации
+
+
+
+E-mail
+name@mail.com
+
+
+
+
+
+
+Пароль
+**************
+
+
+
+
+Подтверждение пароля
+
+
+**************
+
+
+
+регистрация
+
+
+
+
+
+Пароль дожен содержатьне менее 6 символов
+
+
+
+
+
 
 <!--#include file="_foot.shtml"-->
