--- a/home.html
+++ b/home.html
@@ -1,203 +1,97 @@
-<!--#set var="title" value="LevenTime" -->
 <!--#include file="_head.shtml"-->
 
-	<main class="main flexbox__flex-1">
+	<main>
 
-		<article class="">
+		<article class="center">
 
-			<h1 class=""></h1>
+			<h1 class="h1">Что ты можешь делать в Leventime?</h1>
+
+			<ul class="list-pic flexbox flexbox--wrap flexbox--center">
+				<li>Открывать встречи</li>
+				<li>Учавствовать во встречах, <br>посещать интересные места</li>
+				<li>Просматривать встречи<br>своих друзей</li>
+				<li>Находить единомышленников</li>
+				<li>Получать награды</li>
+				<li>Создавать встречи и получать<br>скидки в любимых местах</li>
+			</ul>
+
+			<h2 class="h1">О Leventime</h2>
+
+			<div class="img-text flexbox flexbox--column">
+
+				<div class="img-text__item flexbox">
+
+					<div class="img-text__text flexbox__order-1 flexbox flexbox--column flexbox--align-self">
+
+						<h3>Leventime</h3>
+
+						<p>представляет собой сервис, для создания и поиска встреч, с целью новых знакомств.</p>
+
+					</div>
+
+					<img src="img/img-text__1.jpg" alt="">
+
+				</div>
+
+				<div class="img-text__item flexbox">
+
+					<p class="img-text__text flexbox flexbox--align-self">
+
+						Если вы хотите куда-нибудь сходить, но не имеете спутника, то мы обязательно будем вам полезны.
+
+					</p>
+
+					<img src="img/img-text__2.jpg" alt="">
+
+				</div>
+
+				<div class="img-text__item flexbox">
+
+					<p class="img-text__text flexbox__order-1 flexbox flexbox--align-self">
+
+						Создать встречу можно от простого похода в кофейню, прогулки на улице, похода в кино, до больших мероприятий, таких как поездка за границу.
+
+					</p>
+
+					<img src="img/img-text__3.jpg" alt="">
+
+				</div>
+
+				<div class="img-text__item flexbox">
+
+					<p class="img-text__text flexbox flexbox--align-self">
+
+						Никогда еще поиск новых знакомых не был таким простым. Попробуйте и убедитесь в этом сами.
+
+					</p>
+
+					<img src="img/img-text__4.jpg" alt="">
+
+				</div>
+
+			</div>
 
 		</article>
 
+		<aside class="app-download">
+
+			<h2 class="h1">Где скачать</h2>
+
+			<div class="app-download__img">
+
+				<img src="img/app.png" alt="приложение Leventime">
+
+			</div>
+
+			<a class="app-download__item" href="" rel="nofollow">
+				<img src="img/app-google-play.png" alt="скачать Leventime в Google Play">
+			</a>
+			<a class="app-download__item" href="" rel="nofollow">
+				<img src="img/app-apple-store.png" alt="скачать Leventime в App Store">
+			</a>
+
+		</aside>
+
 	</main>
-
-
-
-
-Your site's title should be here
-
-
-Подробнее
-
-Участвуй в тестированиии получи новый сверхбыстрыйбезупречный смартфонXiaomi MI5
-
-
-
-
-Открой мир заново
-
-
-
-RU
-
-
-
-
-Что ты можешь делать в Leventime?
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-Открывать встречи
-
-
-
-
-
-Учавствовать во встречах,посещать интересные места
-
-
-
-
-
-Просматривать встречисвоих друзей
-
-
-
-
-
-
-Находить единомышленников
-
-Получать награды
-
-
-Создавать встречи и получатьскидки в любимых местах
-
-
-
-
-Где скачать
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-о leventime
-
-
-
-Leventime&nbsp;представляет собой сервис, для создания и поиска встреч, с целью новых знакомств.
-
-
-
-Если вы хотите куда-нибудь сходить, но не имеете спутника, то мы обязательно будем вам полезны.
-
-
-
-
-Создать встречу можно от простого похода в кофейню, прогулки на улице, похода в кино, до больших мероприятий, таких как поездка за границу.
-
-
-
-Никогда еще поиск новых знакомых не был таким простым. Попробуйте и убедитесь в этом сами.
-
-
-
-
-
-
-
-
-
-
-Copyright © 2017
-
-
-
-
-
-АВТОРИЗАЦИЯ
-
-
-
-
-
-
-
-E-mail
-Неправильный е-мейл
-
-
-
-
-
-
-Пароль
-Неправильный пароль
-
-
-
-
-Забыли пароль?
-
-
-
-
-
-Запомнить меня
-
-
-войти
-
-
-
-
-Название организации
-
-
-
-E-mail
-name@mail.com
-
-
-
-
-
-
-Пароль
-**************
-
-
-
-
-Подтверждение пароля
-
-
-**************
-
-
-
-регистрация
-
-
-
-
-
-Пароль дожен содержатьне менее 6 символов
-
-
-
-
-
 
 <!--#include file="_foot.shtml"-->
