--- a/home.html
+++ b/home.html
@@ -79,14 +79,20 @@
 
 			<div class="app-download__img">
 
-				<img src="img/app.png" alt="приложение Leventime">
+				<span class="app-download__parallax">
+
+					<img src="/images/app-download__parallax.png" alt="приложения Leventime">
+
+				</span>
+
+				<img class="app-download__img-app" src="img/app.png" alt="приложение Leventime">
 
 			</div>
 
-			<a class="app-download__item" href="" rel="nofollow">
+			<a class="app-download__item" data-alert-up="android" rel="nofollow">
 				<img src="img/app-google-play.png" alt="скачать Leventime в Google Play">
 			</a>
-			<a class="app-download__item" href="" rel="nofollow">
+			<a class="app-download__item" data-alert-up="ios" rel="nofollow">
 				<img src="img/app-apple-store.png" alt="скачать Leventime в App Store">
 			</a>
 
