--- a/home.html
+++ b/home.html
@@ -90,10 +90,10 @@
 			</div>
 
 			<a class="app-download__item" data-alert-up="android" rel="nofollow">
-				<img src="img/app-google-play.png" alt="скачать Leventime в Google Play">
+				<img src="img/app-google-play.png" height="42" alt="скачать Leventime в Google Play">
 			</a>
 			<a class="app-download__item" data-alert-up="ios" rel="nofollow">
-				<img src="img/app-apple-store.png" alt="скачать Leventime в App Store">
+				<img src="img/app-apple-store.png" height="42" alt="скачать Leventime в App Store">
 			</a>
 
 		</aside>
