--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
 
 					</div>
 
-					<img src="img/img-text__1.jpg" alt="">
+					<img src="img/img-text__1.jpg" srcset="img/img-text__1@2x.jpg 2x" alt="">
 
 				</div>
 
@@ -41,7 +41,7 @@
 
 					</p>
 
-					<img src="img/img-text__2.jpg" alt="">
+					<img src="img/img-text__2.jpg" srcset="img/img-text__2@2x.jpg 2x" alt="">
 
 				</div>
 
@@ -53,7 +53,7 @@
 
 					</p>
 
-					<img src="img/img-text__3.jpg" alt="">
+					<img src="img/img-text__3.jpg" srcset="img/img-text__3@2x.jpg 2x" alt="">
 
 				</div>
 
@@ -65,7 +65,7 @@
 
 					</p>
 
-					<img src="img/img-text__4.jpg" alt="">
+					<img src="img/img-text__4.jpg" srcset="img/img-text__4@2x.jpg 2x" alt="">
 
 				</div>
 
@@ -85,7 +85,7 @@
 
 				</span>
 
-				<img class="app-download__img-app" src="img/app.png" alt="приложение Leventime">
+				<img class="app-download__img-app" src="img/app.png" srcset="img/app@2x.png 2x" alt="приложение Leventime">
 
 			</div>
 
