--- a/lk.html
+++ b/lk.html
@@ -1,31 +1,272 @@
 <!--#include file="_head-lk.shtml"-->
 
-	<main>
+	<main class="center">
 
-		<aside class="slider-home slide-show slide-show--off" data-timer="10">
+		<aside class="slider-lk lk-box slide-show slide-show--abscissa">
 
-			<ul class="slide-show__box">
+			<div class="slide-show__box">
 
-				<li class="slide-show__item slide-show__item--active">
+				<ul class="slide-show__ul">
 
-					<div class="center slider-home__item flexbox flexbox--column">
+					<li class="slide-show__item">
 
-						<img class="slider-home__img" src="img/slider-1.png" srcset="img/slider-1@2x.png 2x" alt="">
+						<div class="slider-lk__item slider-lk__item--add">
 
-						<p class="slider-home__text">
-							Участвуй в тестировании <br>и получи новый сверхбыстрый<br>безупречный смартфон
-							<strong class="slider-home__model">Xiaomi MI5</strong>
-							<a class="slider-home__btn btn btn--outline" data-alert-up="rules-not-btn">Подробнее</a>
-						</p>
+							<div class="add-file">
 
-					</div>
+								<span class="add-file__text">Добавьте фото или перетащите фото сюда</span>
 
-				</li>
+								<input type="file" class="add-file__input">
 
-			</ul>
+							</div>
+
+						</div>
+
+					</li>
+
+					<li class="slide-show__item">
+
+						<div class="slider-lk__item slider-lk__item--main">
+
+							<img class="slider-lk__img" src="img/slider-lk-1.jpg" alt="">
+							<a class="ico ico--del-white slider-lk__del-item"></a>
+							<a class="ico ico--check-white slider-lk__set-main"></a>
+							<i class="ico ico--check-blue"></i>
+
+						</div>
+
+					</li>
+
+					<li class="slide-show__item">
+
+						<div class="slider-lk__item">
+
+							<img class="slider-lk__img" src="img/slider-lk-3.jpg" alt="">
+							<a class="ico ico--del-white slider-lk__del-item"></a>
+							<a class="ico ico--check-white slider-lk__set-main"></a>
+							<i class="ico ico--check-blue"></i>
+
+						</div>
+
+					</li>
+
+					<li class="slide-show__item">
+
+						<div class="slider-lk__item">
+
+							<img class="slider-lk__img" src="img/slider-lk-2.jpg" alt="">
+							<a class="ico ico--del-white slider-lk__del-item"></a>
+							<a class="ico ico--check-white slider-lk__set-main"></a>
+							<i class="ico ico--check-blue"></i>
+
+						</div>
+
+					</li>
+
+					<li class="slide-show__item">
+
+						<div class="slider-lk__item">
+
+							<img class="slider-lk__img" src="img/slider-lk-1.jpg" alt="">
+							<a class="ico ico--del-white slider-lk__del-item"></a>
+							<a class="ico ico--check-white slider-lk__set-main"></a>
+							<i class="ico ico--check-blue"></i>
+
+						</div>
+
+					</li>
+
+					<li class="slide-show__item">
+
+						<div class="slider-lk__item">
+
+							<img class="slider-lk__img" src="img/slider-lk-1.jpg" alt="">
+							<a class="ico ico--del-white slider-lk__del-item"></a>
+							<a class="ico ico--check-white slider-lk__set-main"></a>
+							<i class="ico ico--check-blue"></i>
+
+						</div>
+
+					</li>
+
+				</ul>
+
+			</div>
 
 		</aside>
 
+		<div class="flexbox">
+
+			<div class="lk-left flexbox__start">
+
+				<div class="lk-box">
+
+					<h3 class="lk-box__title">Общая информация</h3>
+
+					<h4 class="lk-box__h3">Названия</h4>
+					<p class="lk-box__text">Сеть быстрого питания</p>
+
+					<h4 class="lk-box__h3">Краткое описание</h4>
+					<p class="lk-box__text">Международная сеть ресторанов общественного питания, специализирующаяся на блюдах из курицы. Штаб-квартира компании располагается в городе</p>
+
+					<h4 class="lk-box__h3">Описание</h4>
+					<p class="lk-box__text">Международная сеть ресторанов общественного питания, специализирующаяся на блюдах из курицы. Штаб-квартира компании располагается в городе Луисвилле в штате Кентукки. KFC - вторая по торговому обороту сеть кафе в мире, уступающая лишь компании McDonald's. По состоянию на 2015 год под брендом KFC работали 750 тысяч сотрудников и более 15 тысяц </p>
+
+					<h4 class="lk-box__h3">Средний чек</h4>
+					<p class="lk-box__text lk-box__text--big">$12-23</p>
+
+					<h4 class="lk-box__h3">Тип места</h4>
+					<p class="lk-box__text lk-box__text--big">KFC г. Красноярск , ул. Лесная, 23</p>
+
+					<h4 class="lk-box__h3">Социальные сети и веб-сайты</h4>
+
+					<ul class="social-links">
+						<li>
+							<a class="social-links__item social-links__item--site" href="http://www.kfc.ru" target="_blank">www.kfc.ru</a>
+						</li>
+						<li>
+							<a class="social-links__item social-links__item--vk" href="http://vk.com/kfc" target="_blank">vk.com/kfc</a>
+						</li>
+						<li>
+							<a class="social-links__item social-links__item--fb" href="http://facebook.com/kfc" target="_blank">facebook.com/kfc</a>
+						</li>
+						<li>
+							<a class="social-links__item social-links__item--in" href="http://instagram.com/kfc" target="_blank">instagram.com/kfc</a>
+						</li>
+						<li>
+							<a class="social-links__item social-links__item--tw" href="http://twewter.com/kfc" target="_blank">twewter.com/kfc</a>
+						</li>
+						<li>
+							<a class="social-links__item social-links__item--fl" href="http://flamp.com/kfc" target="_blank">flamp.com/kfc</a>
+						</li>
+					</ul>
+
+					<a class="ico ico--edit lk-box__edit"></a>
+
+				</div>
+
+			</div>
+
+			<div class="lk-right flexbox__end">
+
+				<div class="lk-box">
+
+					<h3 class="lk-box__title">Подписки</h3>
+
+					<p class="lk-box__text">Действует: до 23.05.2017 <br> Статус: <span class="lk-box__red">неактивен</span></p>
+
+					<p class="lk-box__btns">
+						<a class="btn">отправить на модерацию</a>
+					</p>
+
+					<a class="ico ico--add lk-box__add"></a>
+
+				</div>
+
+				<div class="lk-box">
+
+					<h3 class="lk-box__title">Адреса</h3>
+
+					<ul class="lk-box__list-edit">
+						<li class="lk-box__list-edit__item flexbox">
+							<div class="flexbox__start lk-box__list-edit-name">
+								Россия, Красноярск, проспект Мира, 45
+							</div>
+							<div class="flexbox flexbox__end lk-box__list-edit-icons">
+								<span class="lk-box__list-edit-blue">12%</span>
+								<a class="ico ico--inline ico--edit"></a>
+								<a class="ico ico--inline ico--del"></a>
+							</div>
+						</li>
+						<li class="lk-box__list-edit__item flexbox">
+							<div class="flexbox__start lk-box__list-edit-name">
+								Россия, Красноярск, ул. Лесная, 23.
+							</div>
+							<div class="flexbox flexbox__end lk-box__list-edit-icons">
+								<span class="lk-box__list-edit-blue">10%</span>
+								<a class="ico ico--inline ico--edit"></a>
+								<a class="ico ico--inline ico--del"></a>
+							</div>
+						</li>
+						<li class="lk-box__list-edit__item flexbox">
+							<div class="flexbox__start lk-box__list-edit-name">
+								Россия, Красноярск, ул. Красноярская, 12 супермаркет “Ашан”
+							</div>
+							<div class="flexbox flexbox__end lk-box__list-edit-icons">
+								<span class="lk-box__list-edit-blue">5%</span>
+								<a class="ico ico--inline ico--edit"></a>
+								<a class="ico ico--inline ico--del"></a>
+							</div>
+						</li>
+					</ul>
+
+					<a class="ico ico--add lk-box__add"></a>
+
+				</div>
+
+				<div class="lk-box">
+
+					<h3 class="lk-box__title">Режим работы вашей организации</h3>
+
+					<p class="lk-box__text lk-box__text--time">Пн 8:00-16:00 <br>Вт 8:00-16:00 <br>Ср 8:00-16:00 <br>Чт 8:00-16:00 <br>Пт 8:00-16:00 <br>Сб  9:00-15:00 <br>Вс - выходной</p>
+
+					<a class="ico ico--edit lk-box__edit"></a>
+
+				</div>
+
+				<div class="lk-box">
+
+					<h3 class="lk-box__title">Контакты</h3>
+
+					<ul class="lk-box__list-edit">
+						<li class="lk-box__list-edit__item flexbox">
+							<div class="flexbox__start">
+								<a href="tel:89123214321" class="lk-phone">
+									<span class="lk-phone__ico ico ico--tel"></span>
+									<span class="lk-phone__label">Главный офис</span>
+									<span class="lk-phone__tel">8-912-321-43-21</span>
+								</a>
+							</div>
+							<div class="flexbox flexbox__end lk-box__list-edit-icons">
+								<a class="ico ico--inline ico--edit"></a>
+								<a class="ico ico--inline ico--del"></a>
+							</div>
+						</li>
+						<li class="lk-box__list-edit__item flexbox">
+							<div class="flexbox__start">
+								<a href="tel:89123215789" class="lk-phone">
+									<span class="lk-phone__ico ico ico--tel"></span>
+									<span class="lk-phone__label">Офис менеджеров</span>
+									<span class="lk-phone__tel">8-912-321-57-89</span>
+								</a>
+							</div>
+							<div class="flexbox flexbox__end lk-box__list-edit-icons">
+								<a class="ico ico--inline ico--edit"></a>
+								<a class="ico ico--inline ico--del"></a>
+							</div>
+						</li>
+						<li class="lk-box__list-edit__item flexbox">
+							<div class="flexbox__start">
+								<a href="tel:89123404423" class="lk-phone">
+									<span class="lk-phone__ico ico ico--tel"></span>
+									<span class="lk-phone__label">Склад</span>
+									<span class="lk-phone__tel">8-912-340-44-23</span>
+								</a>
+							</div>
+							<div class="flexbox flexbox__end lk-box__list-edit-icons">
+								<a class="ico ico--inline ico--edit"></a>
+								<a class="ico ico--inline ico--del"></a>
+							</div>
+						</li>
+					</ul>
+
+					<a class="ico ico--add lk-box__add"></a>
+
+				</div>
+
+			</div>
+
+		</div>
 
 	</main>
 
