--- a/lk.html
+++ b/lk.html
@@ -141,7 +141,7 @@
 						</li>
 					</ul>
 
-					<a class="ico ico--edit lk-box__edit"></a>
+					<a class="ico ico--edit lk-box__edit" data-alert-up="description"></a>
 
 				</div>
 
@@ -156,10 +156,10 @@
 					<p class="lk-box__text">Действует: до 23.05.2017 <br> Статус: <span class="lk-box__red">неактивен</span></p>
 
 					<p class="lk-box__btns">
-						<a class="btn">отправить на модерацию</a>
+						<a class="btn" data-alert-up="moderator">отправить на модерацию</a>
 					</p>
 
-					<a class="ico ico--add lk-box__add"></a>
+					<a class="ico ico--add lk-box__add" data-alert-up="subscribe"></a>
 
 				</div>
 
@@ -200,7 +200,7 @@
 						</li>
 					</ul>
 
-					<a class="ico ico--add lk-box__add"></a>
+					<a class="ico ico--add lk-box__add" data-alert-up="address"></a>
 
 				</div>
 
@@ -210,7 +210,7 @@
 
 					<p class="lk-box__text lk-box__text--time">Пн 8:00-16:00 <br>Вт 8:00-16:00 <br>Ср 8:00-16:00 <br>Чт 8:00-16:00 <br>Пт 8:00-16:00 <br>Сб  9:00-15:00 <br>Вс - выходной</p>
 
-					<a class="ico ico--edit lk-box__edit"></a>
+					<a class="ico ico--edit lk-box__edit" data-alert-up="time"></a>
 
 				</div>
 
@@ -260,7 +260,7 @@
 						</li>
 					</ul>
 
-					<a class="ico ico--add lk-box__add"></a>
+					<a class="ico ico--add lk-box__add" data-alert-up="contacts"></a>
 
 				</div>
 
