--- a/lk.html
+++ b/lk.html
@@ -4,25 +4,21 @@
 
 		<aside class="slider-lk lk-box slide-show slide-show--abscissa">
 
+			<div class="slider-lk__item slider-lk__item--add">
+
+				<div class="add-file">
+
+					<span class="add-file__text">Добавьте фото или перетащите фото сюда</span>
+
+					<input type="file" class="add-file__input">
+
+				</div>
+
+			</div>
+
 			<div class="slide-show__box">
 
 				<ul class="slide-show__ul">
-
-					<li class="slide-show__item">
-
-						<div class="slider-lk__item slider-lk__item--add">
-
-							<div class="add-file">
-
-								<span class="add-file__text">Добавьте фото или перетащите фото сюда</span>
-
-								<input type="file" class="add-file__input">
-
-							</div>
-
-						</div>
-
-					</li>
 
 					<li class="slide-show__item">
 
@@ -175,7 +171,7 @@
 							<div class="flexbox flexbox__end lk-box__list-edit-icons">
 								<span class="lk-box__list-edit-blue">12%</span>
 								<a class="ico ico--inline ico--edit"></a>
-								<a class="ico ico--inline ico--del"></a>
+								<a class="ico ico--inline ico--del lk-box__list-edit__remove"></a>
 							</div>
 						</li>
 						<li class="lk-box__list-edit__item flexbox">
@@ -185,7 +181,7 @@
 							<div class="flexbox flexbox__end lk-box__list-edit-icons">
 								<span class="lk-box__list-edit-blue">10%</span>
 								<a class="ico ico--inline ico--edit"></a>
-								<a class="ico ico--inline ico--del"></a>
+								<a class="ico ico--inline ico--del lk-box__list-edit__remove"></a>
 							</div>
 						</li>
 						<li class="lk-box__list-edit__item flexbox">
@@ -195,7 +191,7 @@
 							<div class="flexbox flexbox__end lk-box__list-edit-icons">
 								<span class="lk-box__list-edit-blue">5%</span>
 								<a class="ico ico--inline ico--edit"></a>
-								<a class="ico ico--inline ico--del"></a>
+								<a class="ico ico--inline ico--del lk-box__list-edit__remove"></a>
 							</div>
 						</li>
 					</ul>
@@ -229,7 +225,7 @@
 							</div>
 							<div class="flexbox flexbox__end lk-box__list-edit-icons">
 								<a class="ico ico--inline ico--edit"></a>
-								<a class="ico ico--inline ico--del"></a>
+								<a class="ico ico--inline ico--del lk-box__list-edit__remove"></a>
 							</div>
 						</li>
 						<li class="lk-box__list-edit__item flexbox">
@@ -242,7 +238,7 @@
 							</div>
 							<div class="flexbox flexbox__end lk-box__list-edit-icons">
 								<a class="ico ico--inline ico--edit"></a>
-								<a class="ico ico--inline ico--del"></a>
+								<a class="ico ico--inline ico--del lk-box__list-edit__remove"></a>
 							</div>
 						</li>
 						<li class="lk-box__list-edit__item flexbox">
@@ -255,7 +251,7 @@
 							</div>
 							<div class="flexbox flexbox__end lk-box__list-edit-icons">
 								<a class="ico ico--inline ico--edit"></a>
-								<a class="ico ico--inline ico--del"></a>
+								<a class="ico ico--inline ico--del lk-box__list-edit__remove"></a>
 							</div>
 						</li>
 					</ul>
