--- a/lk.html
+++ b/lk.html
@@ -116,6 +116,8 @@
 
 					<h4 class="lk-box__h3">Социальные сети и веб-сайты</h4>
 
+					<p class="lk-box__text lk-box__text--big">Информация отсутствует</p>
+
 					<ul class="social-links">
 						<li>
 							<a class="social-links__item social-links__item--site" href="http://www.kfc.ru" target="_blank">www.kfc.ru</a>
